# cryptopals

./: 8  9  CMakeLists.txt  README.md  build-and-test.sh
.github/workflows/: ci.yml
solutions/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
tests/: 1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  8.sh  9.sh
